[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Worlds/Voxeland/Contexts/Voxeling/assets/ui/voxeling_ui.gd" id="1_3ird0"]
[ext_resource type="PackedScene" path="res://Worlds/Voxeland/Contexts/Voxeling/assets/ui/tool_button.tscn" id="2_hw1vn"]

[node name="voxeling_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3ird0")

[node name="toolbar" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = 13.0
offset_right = 111.0
offset_bottom = 317.0
theme_override_constants/separation = 16
metadata/_edit_group_ = true

[node name="tool_create" parent="toolbar" instance=ExtResource("2_hw1vn")]
offset_right = 97.0
tooltip_text = "CREATE
add | sub"
tool_name = "tool"

[node name="tool_rotate" parent="toolbar" instance=ExtResource("2_hw1vn")]
offset_top = 80.0
offset_right = 97.0
offset_bottom = 144.0
tooltip_text = "ROTATE
ccw | cw"
text = ""
tool_name = ""

[node name="tool_color" parent="toolbar" instance=ExtResource("2_hw1vn")]
offset_top = 160.0
offset_right = 97.0
offset_bottom = 224.0
tooltip_text = "ROTATE
ccw | cw"
text = ""
tool_name = ""

[node name="tool_shape" parent="toolbar" instance=ExtResource("2_hw1vn")]
offset_top = 240.0
offset_right = 97.0
offset_bottom = 304.0
tooltip_text = "ROTATE
ccw | cw"
text = ""
tool_name = ""

[connection signal="pressed" from="toolbar/tool_create" to="." method="_on_tool_create_pressed"]
[connection signal="pressed" from="toolbar/tool_rotate" to="." method="_on_tool_rotate_pressed"]
[connection signal="pressed" from="toolbar/tool_color" to="." method="_on_tool_rotate_pressed"]
[connection signal="pressed" from="toolbar/tool_shape" to="." method="_on_tool_rotate_pressed"]
